# Yet-Another-Raytracer

./: .gitignore  CMakeLists.txt
Lib/: CMakeLists.txt
Lib/include/: Camera.h  Defines.h  LinearMath.h  Mat4.h  Quanternion.h  Renderer.h  TLine.h  TLinearMath.h  TMat4.h  TQuanternion.h  TVector3.h  TVector4.h  Vector3.h  Vector4.h
Lib/src/: Renderer.cpp  TMat4.cpp  TVector3.cpp  Vector3.cpp
Main/: CMakeLists.txt  main.cpp
Main/include/: Buffer.h  Camera.h  Mesh.h  RenderWorker.h  Renderable.h  Renderer.h
Main/src/: Buffer.cpp  Camera.cpp  Mesh.cpp  RenderWorker.cpp  Renderable.cpp  Renderer.cpp  Texture.cpp  main.cpp
YetAnotherMathLib/include/: Algorithms.h  Defines.h  LinearMath.h  Mat4.h  Vector3.h  Vector4.h
